--- a/PianoBazaar/sheetmusic/templates/sheetmusic/create_entry.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/create_entry.html
@@ -1,26 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %} {{view.title}} {% endblock %} 
-
-{% load crispy_forms_tags %} 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
-
-{% block header1 %}
-  <h1> {{view.title}} </h1>
-{% endblock %}
+{% block title %} Crea Studente {% endblock %} 
 
 {% block content %} 
 
-<br>
+<h1> Crea Studente </h1>
 
-<div class="d-flex justify-content-center">
+<form method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Save">
+</form>
 
-  {% crispy form %}
-
-</div>
-<br>
-
-
-<br>
 
 {% endblock %}
