--- a/PianoBazaar/sheetmusic/templates/sheetmusic/create_entry.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/create_entry.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %} Crea Studente {% endblock %} 
+{% block title %} Create sheetmusic {% endblock %} 
 
 {% block content %} 
 
-<h1> Crea Studente </h1>
+<h1> Create Sheetmusic </h1>
 
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
