--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {% block head %} {% endblock %}
-    <title>{% block title %}{% endblock %}</title>
+
+    {% block head %}
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!-- Bootstrap 5 CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap 5 JS Bundle -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% endblock %}
+
+    {% load crispy_forms_tags %}
+
+    <title>{% block title %}PianoBazaar{% endblock %}</title>
 </head>
+
 <body>
     <!-- Navbar -->
-    <section class="container-fluid h-100 pt-5">
-    {% block content %}
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand" href="/">🎵 PianoBazaar</a>
+        <form method="get" action="">
+        <label>
+            <input type="text" name="q" placeholder="Search..." value="{{ query }}">
+        </label>
+        <button type="submit">🔍</button>
+        </form>
+    </nav>
 
-    {% endblock %}
+     <section class="container-fluid h-100 pt-5">
+        {% block content %}
+        <!-- Contenuto variabile inserito dalle pagine figlie -->
+        {% endblock %}
     </section>
+
+    <footer>
+        <p>© 2024 PianoBazaar - All rights reserved.</p>
+    </footer>
 </body>
 </html>
