--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -24,11 +24,11 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="/">🎵 PianoBazaar</a>
-        <form method="get" action="">
+        <form id="search-form" method="get" action="">
         <label>
             <input type="text" name="q" placeholder="Search..." value="{{ query }}">
         </label>
-        <button type="submit">🔍</button>
+        <button id="search-button" type="submit">🔍</button>
         </form>
     </nav>
 
