--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-<div class="container mt-3">
-    <div class="row">
+<div class="container-fluid mt-3">
+    <div class="d-flex flex-wrap justify-content-center">
         {% for score in object_list %}
-        <div class="col-md-4">
-            <div class="card" style="width:400px">
+            <div class="card m-2" style="width:400px">
             <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
                 <div class="card-body">
                 <h4 class="card-title">{{ score.title }}</h4>
@@ -16,7 +15,6 @@
                 <a href="{% url 'sheetmusic:home' %}" class="btn btn-info">See score</a>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div><br>
