--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -41,5 +41,7 @@
     <footer>
         <p>© 2024 PianoBazaar - All rights reserved.</p>
     </footer>
+
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
