--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -1,4 +1,3 @@
-/*Global Styles*/
 body, html {
     margin: 0;
     padding: 0;
@@ -7,28 +6,31 @@ body, html {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-}
-
-/*Layout Wrapper*/
-/*.wrapper {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    min-height: 100vh;*/
-/*!*}*! non in uso, dato che non abbiamo una classe wrapper nel base.html*/
-
-/* Content Area */
-.container-fluid {
-    flex: 1;
-    padding: 1em;
     box-sizing: border-box;
 }
 
-/*Footer Styles*/
+.container-fluid {
+    flex: 1;
+    min-height: calc(100vh - 100px);
+    padding: 1em 1em 100px;
+    box-sizing: border-box;
+}
+
 footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 1em 0;
+    position: fixed;
+    bottom: -100px;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    transition: bottom 0.4s ease;
+}
+
+footer.visible {
+    bottom: 0;
 }
 
 #search-form {
@@ -49,15 +51,6 @@ footer {
 
     transition: box-shadow 0.3s ease;
 }
-
-/*input[type="text"] {*/
-/*    padding: 10px;*/
-/*    width: 600px;*/
-/*    font-size: 16px;*/
-/*    border: 1px solid #ccc;*/
-/*    border-radius: 4px;*/
-/*    margin-right: 0;*/
-/*} global effect careful! */
 
 #search-button {
     padding: 5px 11px;
