--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -16,6 +16,11 @@ body, html {
     box-sizing: border-box;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 100%;
+}
+
 footer {
     background-color: #333;
     color: white;
