--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -23,13 +23,27 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="/">🎵 PianoBazaar</a>
+        <a class="navbar-brand" href="/sheetmusic">🎵 PianoBazaar</a>
         <form id="search-form" method="get" action="">
             <label>
                 <input type="text" name="q" placeholder="Search..." value="{{ query }}">
             </label>
         <button id="search-button" type="submit">🔍</button>
         </form>
+
+            <!-- Links -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'sheetmusic:home' %}">Scores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'sheetmusic:create_sheet' %}">Load score</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link 3</a>
+              </li>
+            </ul>
+
     </nav>
 
      <section class="container-fluid mt-3">
