--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %} Dump del DB Score {% endblock %}
-
 {% block content %}
 
 <div class="container-fluid mt-3">
@@ -12,7 +10,7 @@
                 <div class="card-body">
                 <h4 class="card-title">{{ score.title }}</h4>
                 <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
-                <a href="{% url 'sheetmusic:home' %}" class="btn btn-info">See score</a>
+                <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-info">See score</a>
                 </div>
             </div>
         {% endfor %}
