--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -21,6 +21,16 @@ body, html {
     height: 100%;
 }
 
+.custom-card-shadow {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombra morbida */
+        transition: all 0.3s ease-in-out; /* Effetto di transizione */
+}
+.custom-card-shadow:hover {
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Ombra più grande al passaggio del mouse */
+        transform: translateY(-5px); /* Leggero sollevamento */
+}
+
+
 footer {
     background-color: #333;
     color: white;
