--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    
+    <div class="p-5 bg-primary text-white text-center">
+      <h1>{{ object.user.first_name }} {{ object.user.last_name }}'s profile</h1>
+    </div>
+    <div class="container-fluid mt-5">
+      <div class="row">
+        <div class="col-sm-4">
+          <h2>@{{ profile.user.username }}</h2>
+            <img src="/media/media/profiles/profile_imgs/Cat fofo aesthetic.jpg" class="rounded-circle" alt="profile image" width="150" height="150" style="margin-left: 20px;">
+          <h3 class="mt-4">My Socials</h3>
+          <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">youtube</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">instagram</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">twitter</a>
+            </li>
+          </ul>
+          <hr class="d-sm-none">
+        </div>
+        <div class="col-sm-8">
+          <h2>About me</h2>
+          <h5>{{ object.bio }}</h5>
+         
+    
+          <h2 class="mt-5">TITLE HEADING</h2>
+          <h5>Title description, Sep 2, 2020</h5>
+          <div class="fakeimg">Fake Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+      </div>
+    </div>
+{% endblock %}
