--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -11,6 +11,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap 5 JS Bundle -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        {% block extra-css %}{% endblock %}
+        {% block extra-js %}{% endblock %}
+
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         {% load crispy_forms_tags %}
