--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -29,23 +29,33 @@
         <div class="row">
             <div class="col-md-4">
                 <h3 class="mt-5 bg-primary rounded-1 text-white">My Socials</h3>
+            {% if object.youtube_account_id or object.instagram_account_id or object.x_account_id %}
               <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.youtube.com/@DLMusicPiano/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-youtube" style="color: #FF0000"></i> youtube
+                    {% if object.youtube_account_id %}
+                  <a class="nav-link mt-2" href="https://www.youtube.com/@{{ object.youtube_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-youtube" style="color: #FF0000; font-size: 1.5rem" ></i><h5 class="d-inline"> / {{ object.youtube_account_id }}</h5>
                   </a>
+                    {% endif %}
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.instagram.com/yomii_piano/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-instagram" style="color: #C13584"></i> instagram
+                    {% if object.instagram_account_id %}
+                  <a class="nav-link mt-2" href="https://www.instagram.com/{{ object.instagram_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-instagram" style="color: #C13584; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ object.instagram_account_id }}</h5>
                   </a>
+                    {% endif %}
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">
-                      <i class="fab fa-x x-icon" style="color: #000000;"></i> twitter
+                    {% if object.x_account_id %}
+                  <a class="nav-link" href="https://www.x.com/{{ object.x_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ object.x_account_id }}</h5>
                   </a>
+                    {% endif %}
                 </li>
               </ul>
+            {% else %}
+              <h5 class="mt-3"> {{ object.user.username }} didn't link any social 😔</h5>
+            {% endif %}
             </div>
 
             <div class="col-md-8">
