--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -7,20 +7,20 @@
 
 {% block content %}
 
-    <div class="p-5 bg-primary text-white text-center">
-      <h1>{{ object.user.first_name }} {{ object.user.last_name }}'s profile</h1>
+    <div class="p-5 bg-primary text-white text-center rounded-1">
+      <h1>{{ profile.user.first_name }} {{ profile.user.last_name }}'s profile</h1>
     </div>
-
+    
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-md-4">
               <h2>@{{ profile.user.username }}</h2>
-                <img src="{{object.profile_image.url}}" class="rounded-circle" alt="profile image" width="150" height="150" style="margin-left: 20px;">
+                <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="profile image" width="150" height="150" style="margin-left: 20px;">
             </div>
 
             <div class="col-md-8">
               <h2>About me</h2>
-              <h5>{{ object.bio }}</h5>
+              <h5>{{ profile.bio }}</h5>
                 <hr class="d-sm-none">
             </div>
         </div>
@@ -29,40 +29,68 @@
         <div class="row">
             <div class="col-md-4">
                 <h3 class="mt-5 bg-primary rounded-1 text-white">My Socials</h3>
-            {% if object.youtube_account_id or object.instagram_account_id or object.x_account_id %}
+            {% if profile.youtube_account_id or profile.instagram_account_id or profile.x_account_id %}
               <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    {% if object.youtube_account_id %}
-                  <a class="nav-link mt-2" href="https://www.youtube.com/@{{ object.youtube_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-youtube" style="color: #FF0000; font-size: 1.5rem" ></i><h5 class="d-inline"> / {{ object.youtube_account_id }}</h5>
+                    {% if profile.youtube_account_id %}
+                  <a class="nav-link mt-2" href="https://www.youtube.com/@{{ profile.youtube_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-youtube" style="color: #FF0000; font-size: 1.5rem" ></i><h5 class="d-inline"> / {{ profile.youtube_account_id }}</h5>
                   </a>
                     {% endif %}
                 </li>
                 <li class="nav-item">
-                    {% if object.instagram_account_id %}
-                  <a class="nav-link mt-2" href="https://www.instagram.com/{{ object.instagram_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-instagram" style="color: #C13584; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ object.instagram_account_id }}</h5>
+                    {% if profile.instagram_account_id %}
+                  <a class="nav-link mt-2" href="https://www.instagram.com/{{ profile.instagram_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-instagram" style="color: #C13584; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.instagram_account_id }}</h5>
                   </a>
                     {% endif %}
                 </li>
                 <li class="nav-item">
-                    {% if object.x_account_id %}
-                  <a class="nav-link" href="https://www.x.com/{{ object.x_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ object.x_account_id }}</h5>
+                    {% if profile.x_account_id %}
+                  <a class="nav-link" href="https://www.x.com/{{ profile.x_account_id }}/" target="_blank" rel="noopener noreferrer">
+                      <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.x_account_id }}</h5>
                   </a>
                     {% endif %}
                 </li>
               </ul>
             {% else %}
-              <h5 class="mt-3"> {{ object.user.username }} didn't link any social 😔</h5>
+              <h5 class="mt-3"> {{ profile.user.username }} didn't link any social. 😔</h5>
+                <br>
             {% endif %}
+            <br><br>
             </div>
 
             <div class="col-md-8">
               <h2 class="mt-5">My Mantra</h2>
-                <h5>"{{ object.mantra }}"</h5>
+                <h5>"{{ profile.mantra }}"</h5>
             </div>
         </div>
+        {% block selection %}
+            <div class="row mt-3">
+                <div class="col-md-12 mt-5 bg-primary text-white rounded-1">
+                    <ul class="pagination pagination-lg">
+                        
+                            <li class="page-item active"><a class="page-link" href="">My Sheet music</a></li>
+                            <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_liked_scores' profile.pk %}">Liked scores</a></li>
+                            <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_purchased_scores' profile.pk %}">Purchased scores</a></li>
+                        
+                    </ul>
+                </div>
+            </div>
+            
+            <div id="card-container" class="d-flex flex-wrap justify-content-left mt-4 p-0">
+                {% for score in my_scores_list %}
+                    <div class="card m-2">
+                    <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
+                        <div class="card-body">
+                        <h4 class="card-title">{{ score.title }}</h4>
+                        <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
+                        <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-info">See score</a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endblock %}
     </div>
 
 {% endblock %}
