--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div class="container-fluid mt-3">
-    <div class="d-flex flex-wrap justify-content-center">
+<div class="container-fluid mt-3 bg-danger">
+    <div id="card-container" class="d-flex flex-wrap justify-content-center">
         {% for score in object_list %}
             <div class="card m-2" style="width:400px">
             <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
