--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -109,3 +109,44 @@ footer.visible {
 .nav-item .nav-link:hover .fab {
     animation: fa-beat 0.5s infinite;
 }
+
+.pagination {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-content: stretch;
+}
+
+.pagination .page-item {
+    flex: 1; /* Ogni elemento occupa lo stesso spazio */
+    text-align: center; /* Centra il testo */
+    margin: 0 0.2rem; /* spaziatura tra i pulsanti */
+}
+
+.pagination .page-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: black;
+    background-color: white;
+    padding: 10px 0;
+    border-radius: 5px;
+    /*padding: 15px 0; !* Aggiungi verticale all'interno dei link *!*/
+}
+
+.pagination .page-item.active .page-link {
+    background-color: darkorange; /* Colore per il link attivo */
+    color: white; /* Colora il testo di bianco */
+    display: block;
+}
+
+.pagination .page-item .page-link:hover {
+    background-color: sandybrown; /* Cambia colore al passaggio del mouse */
+    color: white;
+}
+
+.pagination .page-item.active .page-link:hover {
+    background-color: darkorange; /* Colore per il link attivo */
+    color: white; /* Colora il testo di bianco */
+    display: block;
+}
