user creation form

--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -49,6 +49,10 @@
 
     </nav>
 
+    <div class="jumbotron text-center mt-3" style="margin-bottom:0">
+        {% block header %}{% endblock %}
+    </div>
+
      <section class="container-fluid mt-3">
         {% block content %}
         <!-- Contenuto variabile inserito dalle pagine figlie -->
