--- a/PianoBazaar/templates/profile_create.html
+++ b/PianoBazaar/templates/profile_create.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
+
 {% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
+
+{% block extra-css %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+{% endblock %}
+{% block extra-js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+{% endblock %}
 
 {% block content %}
 
@@ -27,4 +36,3 @@
     </div><br><br><br><br>
 
 {% endblock %}
-
