--- a/PianoBazaar/templates/home.html
+++ b/PianoBazaar/templates/home.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Home di Piano Bazaar {% endblock %}
-
+{% block title %} Piano Bazaar - Home {% endblock %}
 
 {% block content %}
     <h1>Welcome to Piano Bazaar</h1>
