--- a/PianoBazaar/sheetmusic/templates/sheetmusic/home.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/home.html
@@ -1,8 +1,8 @@
 {%  extends 'base.html' %}
 
-{% block title %} Home di Sheet Music {% endblock %}
+{% block title %} PianoBazaar - sheetmusic {% endblock %}
 
 
 {% block content %}
-    <h1>Welcome to sheetmusic</h1>
+    {% include 'sheetmusic/score_list.html' %}
 {% endblock %}
