--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -8,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Bootstrap 5 CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap 5 JS Bundle -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
         {% block extra-css %}{% endblock %}
         {% block extra-js %}{% endblock %}
@@ -52,6 +52,28 @@
     <div class="jumbotron text-center mt-3" style="margin-bottom:0">
         {% block header %}{% endblock %}
     </div>
+
+    {% if welcome_message %}
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+          <div id="loginToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                {# <img src="/media/media/profiles/profile_imgs/dripping_cat.jpg" class="rounded me-2" alt="image_not_found"> per aggiungere li logo quando viene mandato il messaggio#}
+              <strong class="me-auto">🎵 PianoBazaar</strong>
+              <small>Just now</small>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                {{ welcome_message }}
+            </div>
+          </div>
+        </div>
+        <script>
+          document.addEventListener('DOMContentLoaded', () => {
+              const loginToast = bootstrap.Toast.getOrCreateInstance(document.getElementById('loginToast'));
+              loginToast.show();
+          });
+        </script>
+    {% endif %}
 
      <section class="container-fluid mt-3">
         {% block content %}
