--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-3 bg-danger">
+<div class="container-fluid mt-3">
     <div id="card-container" class="d-flex flex-wrap justify-content-center">
         {% for score in object_list %}
             <div class="card m-2" style="width:400px">
