--- a/PianoBazaar/templates/registration/login.html
+++ b/PianoBazaar/templates/registration/login.html
@@ -1,24 +1,45 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block title %}PianoBazaar - Login{% endblock %}
 
-{% block content %}
+{% block mex %}
+    {% if messages %}
+         {% for message in messages %}
+            <div class="h5 text-center alert alert-danger fade show" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endblock %}
 
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-8">
+{% block content %}
+    <div class="d-flex justify-content-center mt-4">
+        <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h2 class="text-center">Login</h2>
+                    <h2 class="text-center mt-2">Login</h2>
                 </div>
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        {{ form | crispy }}
+
+                        <div class="row row-cols-lg-auto g-0 align-items-center mt-3">
                         <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <div class="col-12">
+                                <div class="form-check ms-4">
+                                  <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+                                  <label class="form-check-label" for="inlineFormCheck">
+                                    Remember me
+                                  </label>
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="card-footer text-muted text-center">
-                    <p>Don't have an account? <a href="{% url 'register' %}">Sign up here</a></p>
+                    <h5 class="text-muted mt-2">Don't have an account? <a href="{% url 'register' %}">Sign up here</a></h5>
                 </div>
             </div>
         </div>
