--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
@@ -14,7 +14,7 @@
             <div class="col-md-5 offset-md-2">
                 <p class="h1">{{ object.title }}</p>
                 <p class="h4 d-inline">by </p>
-                <a id="arranger-profile-link" class="h4 d-inline" style="text-decoration: none" href="{% url 'sheetmusic:arranger' object.arranger.pk %}"> {{ object.arranger }}</a>
+                <a id="arranger-profile-link" class="h4 d-inline link-primary" style="text-decoration: none" href="{% url 'sheetmusic:arranger' object.arranger.pk %}"> {{ object.arranger }}</a>
                 <br><br>
                 <p class="h3">Details</p>
                 <ul class="list-group">
