--- a/PianoBazaar/templates/registration/user_create.html
+++ b/PianoBazaar/templates/registration/user_create.html
@@ -6,7 +6,7 @@
     <div class="d-flex justify-content-center mt-2">
         <div class="card">
             <div class="card-header">
-                <h2 class="text-center">Registration page</h2>
+                <h2 class="text-center mt-1">Registration page</h2>
                 <h5 class="text-center">Hello, in order to register please compile the following forms.</h5>
             </div>
             <div class="card-body">
@@ -14,7 +14,7 @@
 
                     {{ form|crispy }}
 
-                    <input type="submit" class="btn btn-success mt-2 bg-primary" value="Register now!">
+                    <input type="submit" class="btn btn-primary mt-2" value="Register now">
 
                 </form>
             </div>
