--- a/PianoBazaar/templates/registration/login.html
+++ b/PianoBazaar/templates/registration/login.html
@@ -26,7 +26,7 @@
                         {{ form | crispy }}
 
                         <div class="row row-cols-lg-auto g-0 align-items-center mt-3">
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn btn-primary">Login</button>
                             <div class="col-12">
                                 <div class="form-check ms-4">
                                   <input class="form-check-input" type="checkbox" id="inlineFormCheck">
