--- a/PianoBazaar/templates/registration/profile_create.html
+++ b/PianoBazaar/templates/registration/profile_create.html
@@ -15,7 +15,7 @@
 
                     {{ form|crispy }}
 
-                    <input type="submit" class="btn btn-success mt-2 bg-primary" value="Register now!">
+                    <input type="submit" class="btn btn-primary mt-2" value="Create Profile">
 
                 </form>
             </div>
