--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_list.html
@@ -5,9 +5,9 @@
 
 {% block content %}
     <div class="container-fluid mt-3">
-        <div id="card-container" class="d-flex flex-wrap justify-content-center bg-dark">
+        <div id="card-container" class="d-flex flex-wrap justify-content-center">
             {% for arranger in object_list %}
-                <div class="card border-primary-subtle m-2" style="max-width: 22rem;">
+                <div class="card m-2" style="max-width: 20rem;">
 
                     <div class="card-header">
                         <h4 class="card-title">@{{ arranger.user.username }}</h4>
@@ -16,7 +16,7 @@
 
 {#                    <img class="card-img" src="{{ arranger.profile_image.url }}" alt="media/profiles/profile_imgs/profile-default.256x256.png" style="width:200px; height: 200px;">#}
                     <div class="d-flex justify-content-center align-items-center">
-                        <img class="img-fluid" src="{{ arranger.profile_image.url }}" alt="media/profiles/profile_imgs/profile-default.256x256.png" style="width: 100%; height: 18rem; object-fit: cover">
+                        <img class="img-fluid" src="{{ arranger.profile_image.url }}" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" style="width: 100%; height: 16rem; object-fit: cover">
                     </div>
 
                     <div class="card-body">
