--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_list.html
@@ -1,14 +1,63 @@
 <div class="container-fluid mt-3">
-    <div id="card-container" class="d-flex flex-wrap justify-content-center">
-        {% for score in object_list %}
-            <div class="card m-2" style="width:400px">
-            <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
-                <div class="card-body">
-                <h4 class="card-title">{{ score.title }}</h4>
-                <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
-                <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+
+    {% if user.is_authenticated %}
+        
+        <div id="card-container" class="d-flex flex-wrap justify-content-center">
+        
+            {% for score in object_list %}
+                <div class="card m-2" style="width:400px">
+                <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
+                    <div class="card-body">
+                        
+                        <h4 class="card-title">{{ score.title }}</h4>
+                        <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
+                        
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+                        
+                            {% if score in arranger.liked_scores.all %}
+                                <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                                    <i class="fa-solid fa-heart me-3" style="font-size: 1.5rem; color: red"></i>
+                                </a>
+                            {% else %}
+                                <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                                    <i class="fa-regular fa-heart me-3" style="font-size: 1.5rem; color: grey"></i>
+                                </a>
+                            {% endif %}
+                        
+                        </div>
+                        
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
+            {% endfor %}
+        
+        </div>
+        
+    {% else %}
+        
+        <div id="card-container" class="d-flex flex-wrap justify-content-center">
+        
+            {% for score in object_list %}
+                <div class="card m-2" style="width:400px">
+                <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
+                    <div class="card-body">
+                        
+                        <h4 class="card-title">{{ score.title }}</h4>
+                        <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
+                        
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+                            <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                                <i class="fa-regular fa-heart me-3" style="font-size: 1.5rem; color: grey"></i>
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+            {% endfor %}
+        
+        </div>
+        
+    {% endif %}
+
 </div><br>
