--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -3,14 +3,18 @@
 {% block content %}
 
     <div class="p-5 bg-primary text-white text-center rounded-1">
-      <h1>{{ profile.user.first_name }} {{ profile.user.last_name }}'s profile</h1>
+        {% if profile.user.first_name and profile.user.last_name %}
+            <h1>{{ profile.user.first_name }} {{ profile.user.last_name }}'s profile</h1>
+        {% else %}
+            <h1>{{ profile.user.username }}'s profile</h1>
+        {% endif %}
     </div>
     
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-md-4">
               <h2>@{{ profile.user.username }}</h2>
-                <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="profile image" width="150" height="150" style="margin-left: 20px;">
+                <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" width="150" height="150" style="margin-left: 20px;">
             </div>
 
             <div class="col-md-8">
