--- a/PianoBazaar/templates/registration/profile_create.html
+++ b/PianoBazaar/templates/registration/profile_create.html
@@ -13,7 +13,7 @@
                 <h5 class="text-center">You can always update this form later.</h5>
             </div>
             <div class="card-body">
-                <form method="post"> {% csrf_token %}
+                <form method="post" enctype="multipart/form-data"> {% csrf_token %}
 
                     {{ form|crispy }}
 
