context processor and more user gui

--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
@@ -30,16 +30,29 @@
                 </ul>
             
                 <div class="d-flex align-items-center mb-3 mt-3">
+                
                     {% if user.is_authenticated %}
                         <a href="{% url 'sheetmusic:checkout' pk=score.arranger.pk %}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
+                        
+                        {% if object in user_profile.shopping_cart.all %}
+                             <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
+                                <p class="h5 d-inline">Remove from Cart </p>
+                                <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
+                             </a>
+                            {% else %}
+                            <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
+                                <p class="h5 d-inline">Add to cart </p>
+                                <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
+                             </a>
+                        {% endif %}
                     {% else %}
                         <a href="{% url 'login' %}?next=/sheetmusic/detail/{{ object.pk }}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
+                        
+                        <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
+                            <p class="h5 d-inline">Add to cart </p>
+                            <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
+                        </a>
                     {% endif %}
-                
-                    <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_chart' score_pk=score.pk %}">
-                        <p class="h5 d-inline">Add to cart </p>
-                        <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
-                    </a>
                 
                 </div>
             
