--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -77,9 +77,9 @@
                           {{ user.username }}
                       </button>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'sheetmusic:arranger' pk=user_profile.id %}">My Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Sales Insights</a></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:arranger' pk=user_profile.id %}">My Profile</a></li>
+                        <li><a class="dropdown-item nav-link" href="#">Sales Insights</a></li>
+                        <li><a class="dropdown-item nav-link" href="{% url 'logout' %}">Logout</a></li>
                       </ul>
                     </div>
                 </li>
@@ -123,12 +123,47 @@
     {% endif %}
     {% endblock %}
 
+    {% block modal %}
+        {% if logout_modal %}
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-3" id="staticBackdropLabel">Logout</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                      <h5> {{ user.username }}, are you sure you want to log out? </h5>
+                  </div>
+                  <div class="modal-footer">
+
+                      <form action="{% url 'logout' %}" method="post">
+                          {% csrf_token %}
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="submit" class="btn btn-primary">Confirm</button>
+                      </form>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <script>
+              document.addEventListener("DOMContentLoaded", () => {
+                const myModal = bootstrap.Modal.getOrCreateInstance(document.getElementById('staticBackdrop'));
+                myModal.show();
+              });
+            </script>
+        {% endif %}
+    {% endblock %}
+
      <section class="container-fluid mt-3">
         {% block content %}
         <!-- Contenuto variabile inserito dalle pagine figlie -->
         {% endblock %}
     </section>
+
     <br><br>
+
     <footer>
         <p>© 2024 PianoBazaar - All rights reserved.</p>
     </footer>
